
1.0 (11/01/2022)
The bot works.

	1.0.1 (28/01/2022)
	Fixes... everything.

	1.0.2 (07/02/2022)
	Fixes trying to watch an invalid app.
	/watch : Gets rid of a redundant API call.


1.1 (14/02/2022)
Greatly improves news embeds: adds link, formatting, and YouTube links.


1.2 (20/02/2022)
Adds /search
/info, /latest, /watch and /unwatch now accepts game names
/info now gets the correct currency

	1.2.1 (01/03/2022)
	toEmbed removes empty [url] tags
	Commands that could work outside of servers now do.

	1.2.2 (22/03/2022)
	Various fixes for /info



2.0 (01/04/2022)
Switched to a SQLite database.
Fixes sendToMaster not working if called too early.
Now purges a channel's watchers when that channel is deleted.
/info now uses the user's locale if the language is not specified
/help: Added a French translation.
Added autocomplete options to /watch, /unwatch, /latest and /info
Removed /search
Added /open

2.1 (20/04/2022)
Adds /locale, that allows a server to set a default locale for /info