@@ -40,3 +40,4 @@ Added /open
 
 2.1 (20/04/2022)
 Adds /locale, that allows a server to set a default locale for /info
+/unwatch now has per-guild options instead of autocomplete.
